--- a/C# again/Dolphiilution+/Dolphiilution+/Properties/Resources.resx
+++ b/C# again/Dolphiilution+/Dolphiilution+/Properties/Resources.resx
@@ -121,4 +121,13 @@
   <data name="DECOMP" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DECOMP.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ntsc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\United-States-Flag-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ntscj" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Japan-Flag-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\European-Union-Flag-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
